# euclidean_algo

./: Cargo.toml  README.md
src/: euclidean_algorithm.rs  main.rs
src/euclidean_algorithm/: eucl_algo_loop.rs  eucl_algo_recursive.rs  mod.rs
