[package]
name = "euclidean_algo"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/CarlosGRodriguezL/euclidean_algo"
authors = ["Carlos Rodriguez"]
description = "Implementation of the euclidean algorithm to find the greatest common divisor."

[lib]
name = "euclidean_algo"
path = "src/euclidean_algorithm/mod.rs"

[[bin]]
name = "libtest"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
