[package]
name = "euclidean_algo"
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/CarlosGRodriguezL/euclidean_algo"
authors = ["Carlos Rodriguez"]
description = "Implementation of the euclidean algorithm to find the greatest common divisor."

[lib]
name = "euclidean_algo"
path = "src/euclidean_algorithm/mod.rs"

[[bin]]
name = "libtest"
path = "src/main.rs"

[dependencies]
num = "0.4"
